web/react-site/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consoquest-react
spec:
  selector:
    app: consoquest-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
