web/react-site/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consoquest-react-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: conso.akilgour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consoquest-react
                port:
                  number: 80
